syntax = "proto3";

option go_package = "todo-service/proto";

package proto;

service TaskService {
    rpc GetTasks(GetTasksRequest) returns (GetTasksResponse);
    rpc UpdateTaskStatus(UpdateTaskStatusRequest) returns (UpdateTaskStatusResponse);
}

message GetTasksRequest {}

message GetTasksResponse {
    repeated Task tasks = 1;
}

message UpdateTaskStatusRequest {
    int64 id = 1;
    bool completed = 2;
}

message UpdateTaskStatusResponse {
    bool success = 1;
}

message Task {
    int64 id = 1;
    string title = 2;
    string description = 3;
    string created_at = 4;
    bool completed = 5;
}